# docker-tray

./: .autorc  .gitignore  CHANGELOG.md  README.md  README_EN.md  index.html  package-lock.json  package.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
scripts/: bundle-runtime.sh  install.sh  setup-dev-runtime.sh  sync-version.mjs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  lib.rs  main.rs  runtime.rs
src/components/: ComposeDialog.tsx  ConfirmDialog.tsx  ContainersTab.tsx  ContextMenu.tsx  CreateContainerDialog.tsx  FileExplorer.tsx  ImagesTab.tsx  LogWindow.tsx  NetworksTab.tsx  PullImageDialog.tsx  Settings.tsx  VolumesTab.tsx
src/hooks/: useAutoResize.ts  useDocker.ts
