[package]
name = "docker-tray"
version = "0.1.0"
description = "Docker management tray app"
authors = ["yurseria"]
edition = "2021"

[lib]
name = "docker_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor", "NSResponder", "NSView"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
